# exchange-order-browser

./: .gitignore  Cargo.toml  Dockerfile  README.md
frontend/: index.css  index.html  index.js
src/: exchange.rs  main.rs  website.rs
src/exchange/: binance.rs  trade_reader.rs
src/exchange/binance/: data.rs  ws.rs
src/exchange/olx/: data.rs
