[package]
name = "exchange-order-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io", "rt"] }
tokio-stream = "0.1.9"
actix-web = "4"
actix-files = "0.6.2"
actix-http = "3.2.2"
actix-web-httpauth = "0.8.0"
awc = { version = "3", features = ["rustls"] }
actix-codec = "0.5.0"
env_logger = "0.9"
log = "0.4"
rustls = "0.20"
futures = "0.3.24"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde-xml-rs = "0.6.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.36"
chrono = { version = "0.4.22", features = ["serde"] }
async_zip = "0.0.8"
